// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PulseDot renders for status down 1`] = `
<body>
  <div>
    <div
      class="makeStyles-root-23 makeStyles-down-28"
      style="width: 16px; height: 16px;"
    />
  </div>
</body>
`;

exports[`PulseDot renders for status healthy 1`] = `
<body>
  <div>
    <div
      class="makeStyles-root-2 makeStyles-healthy-3"
      style="width: 16px; height: 16px;"
    />
  </div>
</body>
`;

exports[`PulseDot renders for status restarting 1`] = `
<body>
  <div>
    <div
      class="makeStyles-root-16 makeStyles-restarting-20"
      style="width: 16px; height: 16px;"
    />
  </div>
</body>
`;

exports[`PulseDot renders for status syncing 1`] = `
<body>
  <div>
    <div
      class="makeStyles-root-9 makeStyles-syncing-11"
      style="width: 16px; height: 16px;"
    />
  </div>
</body>
`;
